<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_header">

        <SwitchPreference
            app:defaultValue="true"
            app:key="sound_mode"
            app:title="@string/title_sound" />

        <ListPreference
            app:defaultValue="darkblue_gradient"
            app:entries="@array/backgroundchoices"
            app:entryValues="@array/backgroundvalues"
            app:key="background_color"
            app:summary="Set different background color"
            app:title="@string/title_background" />

        <ListPreference
            app:defaultValue="darkblue"
            app:entries="@array/buttonchoices"
            app:entryValues="@array/buttonvalues"
            app:key="button_color"
            app:summary="Set different button color"
            app:title="@string/title_button" />

        <ListPreference
            app:defaultValue="lightgrey"
            app:entries="@array/questionanswerchoices"
            app:entryValues="@array/questionanswervalues"
            app:key="txt_color"
            app:summary="Change question and answer color"
            app:title="@string/title_text" />

    </PreferenceCategory>
</PreferenceScreen>